# letools

./: .gitignore  pyproject.toml
letools/: create_filter.py  scrape_uniques.py
output/: unique_items.csv  unique_items.json  unique_items.xml
